if("${SYSTEM_NAME_UPPER}" MATCHES "ANDROID")
    set(IDE_FOLDER "Android")
    add_subdirectory(android/app)
elseif("${SYSTEM_NAME_UPPER}" MATCHES "IOS")
	add_subdirectory(iOS)
elseif("${SYSTEM_NAME_UPPER}" MATCHES "EMSCRIPTEN")
    add_subdirectory(emscripten)
else()
    add_subdirectory(glfw)
endif()
